alignment-fix

--- a/src/components/ImageTab/ImageTab.scss
+++ b/src/components/ImageTab/ImageTab.scss
@@ -1,8 +1,6 @@
 .image-tab {
   width: 100%;
   height: 100%;
-  min-width: 0;
-  min-height: 0;
   display: flex;
   justify-content: center;
   align-items: center;
